objects/ServiceTerritoryMember.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Original_Geolocation__c</fullName>
        <label>FSLDemoTools Original Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL_Mobile_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSL Mobile Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Capacity_Based_Resource__c</fullName>
        <formula>ServiceResource.IsCapacityBased</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity Based Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Non_Capacity_Based_Resource__c</fullName>
        <formula>NOT(SDO_SFS_Capacity_Based_Resource__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Capacity Based Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Tool_FSLDemoTools_Master_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSLDemoTools Master Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Resource_Name__c</fullName>
        <formula>ServiceResource.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Resource Name</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FSLDemoTools_Fields</fullName>
        <active>false</active>
        <errorConditionFormula>SDO_Tool_FSLDemoTools_Master_Data__c</errorConditionFormula>
        <errorMessage>Can&apos;t edit the FSLDemoTools Master data</errorMessage>
    </validationRules>
</CustomObject>